--- a/Fekrah/API/ClientApp/src/app/Shared/layout/header/header.component.html
+++ b/Fekrah/API/ClientApp/src/app/Shared/layout/header/header.component.html
@@ -20,7 +20,7 @@
     <input type="text" [placeholder]="searchPlaceholder" [(ngModel)]="searchTerm" />
     <button class="search-button" (click)="search()">
       <i class="fas fa-search"></i>
-      <span class="search-text">{{ searchButtonText }}</span>
+      <!-- <span class="search-text">{{ searchButtonText }}</span> -->
     </button>
   </div>
 
